--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
@@ -76,7 +76,8 @@
   </footer>
 
 </body>
-  <style>
+
+  <style>/* General Styles */
 body {
   font-family: 'Tahoma', sans-serif;
   background-color: #0e0e11;
@@ -100,14 +101,12 @@ body {
   font-size: 48px;
   margin-bottom: 10px;
   color: #fff;
-  animation: slideInFromTop 1s ease-in-out;
 }
 
 .hero p {
   font-size: 20px;
   margin-bottom: 20px;
   color: #fff;
-  animation: slideInFromTop 1.5s ease-in-out;
 }
 
 .btn {
@@ -120,29 +119,34 @@ body {
   animation: fadeIn 2s ease-in-out;
 }
 
-/* About Section */
-section {
-  padding: 60px 20px;
-  animation: fadeInUp 2s ease-in-out;
+/* Rules Section */
+.rules {
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 30px;
+  border-radius: 10px;
+  margin-top: 30px;
 }
 
-/* Animation */
-@keyframes fadeIn {
-  0% { opacity: 0; }
-  100% { opacity: 1; }
+.rules h2 {
+  font-size: 30px;
+  margin-bottom: 20px;
+  color: #fff;
 }
 
-@keyframes fadeInUp {
-  0% { opacity: 0; transform: translateY(30px); }
-  100% { opacity: 1; transform: translateY(0); }
+.rules ul {
+  list-style-type: none;
+  padding: 0;
 }
 
-@keyframes slideInFromTop {
-  0% { opacity: 0; transform: translateY(-50px); }
-  100% { opacity: 1; transform: translateY(0); }
+.rules li {
+  background-color: #5865F2;
+  color: white;
+  padding: 12px 24px;
+  margin: 10px 0;
+  border-radius: 6px;
+  font-size: 18px;
 }
 
-/* Footer */
 footer {
   background-color: #1a1a1d;
   padding: 20px;
@@ -150,29 +154,10 @@ footer {
   color: #fff;
 }
 
-/* List Styles */
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-li {
-  font-size: 18px;
-  margin: 10px 0;
-}
-
-/* Rules Section */
-.rules, .minecraft-rules {
-  background-color: rgba(0, 0, 0, 0.7);
-  padding: 30px;
-  border-radius: 10px;
-  margin-top: 30px;
-}
-
-.rules h2, .minecraft-rules h2 {
-  font-size: 30px;
-  margin-bottom: 20px;
-  color: #fff;
+/* Animation */
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
 }
     </style>
 </html>
